# cpp11logger

./: .gitignore  CMakeLists.txt  README.md
include/: logger.hpp
lib/: CMakeLists.txt  logger.cpp
scripts/: build.bash
test/: CMakeLists.txt  logger_test.cpp
